# agent-backplane

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVEX.md  Justfile  LICENSE-APACHE  README.md  TODO.md  backplane.example.toml  check_err.txt  close_prs.ps1  deny.toml  mutants.toml  pr.md  run_rustfmt.ps1  tarpaulin.toml  test_err.txt  test_out.txt  test_stderr.txt  test_stdout.txt
crates/abp-api-versioning/: Cargo.toml  README.md
crates/abp-api-versioning/src/: lib.rs
crates/abp-api-versioning/tests/: versioning_tests.rs
crates/abp-backend/: Cargo.toml
crates/abp-backend-core/: Cargo.toml  README.md
crates/abp-backend-core/src/: health.rs  lib.rs  metadata.rs  metrics.rs  registry.rs  selection.rs
crates/abp-backend-core/tests/: backend_core_comprehensive.rs  backend_trait_deep.rs  enhanced_backend_core.rs  registry_tests.rs
crates/abp-backend-mock/: Cargo.toml  README.md
crates/abp-backend-mock/src/: lib.rs  scenarios.rs
crates/abp-backend-mock/tests/: backend_mock_comprehensive.rs  event_sequence_tests.rs  mock_backend_deep.rs  scenario_tests.rs
crates/abp-backend-sidecar/: Cargo.toml  README.md
crates/abp-backend-sidecar/src/: lib.rs
crates/abp-backend-sidecar/tests/: sidecar_backend_comprehensive.rs  sidecar_backend_deep.rs
crates/abp-backend/src/: lib.rs
crates/abp-budget/: Cargo.toml  README.md
crates/abp-budget/src/: lib.rs
crates/abp-capability/: Cargo.toml  README.md
crates/abp-capability/src/: compare.rs  emulation.rs  lib.rs  negotiate.rs  preflight.rs  registry.rs  report.rs
crates/abp-capability/tests/: capability_comprehensive.rs  capability_deep.rs  negotiation_protocol_tests.rs  registry_deep_tests.rs
crates/abp-change-tracker/: Cargo.toml  README.md
crates/abp-change-tracker/src/: lib.rs
crates/abp-change-tracker/tests/: tracker_tests.rs
crates/abp-claude-sdk/: Cargo.toml  README.md
crates/abp-claude-sdk/src/: dialect.rs  errors.rs  lib.rs  lowering.rs  messages.rs  models.rs  streaming.rs
crates/abp-claude-sdk/tests/: claude_sdk_comprehensive.rs  claude_surface_deep.rs  coverage_tests.rs  dialect_tests.rs  mapping_tests.rs  snapshots_test.rs  streaming_tests.rs
crates/abp-cli/: Cargo.toml  README.md
crates/abp-cli-params/: Cargo.toml
crates/abp-cli-params/src/: lib.rs
crates/abp-cli/src/: cli.rs  commands.rs  config.rs  format.rs  health.rs  lib.rs  main.rs  schema.rs  status.rs  translate.rs  validate.rs
crates/abp-cli/tests/: cli_command_exhaustive.rs  cli_comprehensive.rs  cli_enhanced_tests.rs  cli_integration.rs  cli_integration_deep.rs  cli_integration_tests.rs  cli_tests.rs  config_schema_test.rs  config_tests.rs  format_tests.rs
crates/abp-codex-sdk/: Cargo.toml  README.md
crates/abp-codex-sdk/src/: api.rs  convert.rs  dialect.rs  error.rs  lib.rs  lowering.rs  streaming.rs  types.rs
crates/abp-codex-sdk/tests/: codex_sdk_comprehensive.rs  codex_tests.rs  coverage_tests.rs  dialect_tests.rs  mapping_tests.rs  snapshots_test.rs  types_tests.rs
crates/abp-command-discovery/: Cargo.toml
crates/abp-command-discovery/src/: lib.rs
crates/abp-compress/: Cargo.toml
crates/abp-compress/src/: lib.rs
crates/abp-config/: Cargo.toml  README.md
crates/abp-config/src/: defaults.rs  diff.rs  diff_analyzer.rs  env.rs  hot_reload_policy.rs  hot_validate.rs  lib.rs  migrate.rs  schema.rs  store.rs  transaction.rs  validate.rs  watcher.rs
crates/abp-config/tests/: config_comprehensive.rs  config_deep.rs  config_deep_tests.rs  config_improvements_tests.rs  config_validation_deep.rs  config_validation_tests.rs  hot_reload_integration.rs  toml_parsing_deep.rs  validation_deep.rs  validation_tests.rs
crates/abp-copilot-sdk/: Cargo.toml  README.md
crates/abp-copilot-sdk/src/: api.rs  convert.rs  dialect.rs  lib.rs  lowering.rs  types.rs
crates/abp-copilot-sdk/tests/: code_suggestions_tests.rs  copilot_sdk_comprehensive.rs  copilot_tests.rs  coverage_tests.rs  types_tests.rs
crates/abp-core/: Cargo.toml  README.md
crates/abp-core/benches/: core_bench.rs  core_benches.rs  hashing.rs
crates/abp-core/src/: aggregate.rs  chain.rs  config.rs  error.rs  ext.rs  filter.rs  ir.rs  lib.rs  negotiate.rs  stream.rs  validate.rs  verify.rs
crates/abp-core/tests/: aggregate_tests.rs  builder_proptest.rs  builder_tests.rs  capability_report_tests.rs  capability_tests.rs  chain_tests.rs  chain_verification_tests.rs  config_tests.rs  contract_coverage.rs  contract_deep_tests.rs  contract_stability.rs  contract_types.rs  ext_tests.rs  (+29 more)
crates/abp-daemon/: Cargo.toml  README.md
crates/abp-dialect/: Cargo.toml  README.md
crates/abp-duration-serde/: Cargo.toml  README.md
crates/abp-emulation/: Cargo.toml  README.md
crates/abp-error/: Cargo.toml  README.md
crates/abp-error-taxonomy/: Cargo.toml  README.md
crates/abp-event-kind/: Cargo.toml  README.md
crates/abp-event-observe/: Cargo.toml  README.md
crates/abp-format/: Cargo.toml  README.md
crates/abp-gemini-sdk/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_agent_event.rs  fuzz_agent_event_json.rs  fuzz_agent_event_parse.rs  fuzz_capability_negotiate.rs  fuzz_capability_negotiation.rs  fuzz_config.rs  fuzz_config_parse.rs  fuzz_dialect_detection.rs  fuzz_envelope.rs  fuzz_envelope_bytes.rs  fuzz_envelope_decode.rs  fuzz_envelope_deser.rs  fuzz_envelope_parse.rs  fuzz_error_code.rs  fuzz_filter.rs  fuzz_glob.rs  fuzz_glob_compile.rs  fuzz_glob_pattern.rs  fuzz_ir_conversation.rs  fuzz_ir_lowering.rs  fuzz_ir_normalize.rs  fuzz_ir_roundtrip.rs  fuzz_ir_translate.rs  fuzz_jsonl_parse.rs  fuzz_jsonl_stream.rs  fuzz_mapper_roundtrip.rs  fuzz_mapping_validate.rs  fuzz_mapping_validation.rs  fuzz_policy_check.rs  fuzz_policy_compile.rs  fuzz_policy_deser.rs  fuzz_policy_engine.rs  fuzz_policy_eval.rs  fuzz_policy_evaluate.rs  fuzz_policy_profile.rs  fuzz_protocol_stream.rs  fuzz_receipt.rs  fuzz_receipt_deserialize.rs  fuzz_receipt_hash.rs  fuzz_receipt_json.rs  (+12 more)
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: schema_test.rs  xtask_tests.rs
(+3236 files in other folders)
