[workspace]
resolver = "2"
members = [
  "crates/abp-glob",
  "crates/abp-core",
  "crates/abp-protocol",
  "crates/abp-host",
  "crates/abp-workspace",
  "crates/abp-policy",
  "crates/abp-integrations",
  "crates/abp-backend",
  "crates/abp-mock-backend",
  "crates/abp-sidecar-backend",
  "crates/abp-runtime",
  "crates/abp-cli",
  "crates/abp-daemon",
  "crates/abp-codex-sdk",
  "crates/abp-gemini-sdk",
  "crates/abp-claude-sdk",
  "crates/abp-kimi-sdk",
  "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Effortless Metrics"]
repository = "https://github.com/EffortlessMetrics/agent-backplane"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.2.1", features = ["chrono04", "uuid1"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "fs"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
tempfile = "3.26.0"
