[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
abp-core = { path = "../crates/abp-core" }
anyhow.workspace = true
clap.workspace = true
schemars.workspace = true
serde_json.workspace = true
