[package]
name = "abp-backend-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Shared backend trait and capability helpers for the Agent Backplane"
keywords = ["agent", "backplane", "backend", "ai", "trait"]
categories = ["development-tools"]

[dependencies]
abp-core = { path = "../abp-core", version = "0.1.0" }
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
