[package]
name = "abp-backend-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
abp-backend = { path = "../abp-backend" }
abp-core = { path = "../abp-core" }
abp-host = { path = "../abp-host" }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
