[package]
name = "abp-backend-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sidecar backend adapter for JSONL protocol agents in the Agent Backplane"
keywords = ["agent", "backplane", "sidecar", "backend", "jsonl"]
categories = ["development-tools"]

[dependencies]
abp-backend-core = { path = "../abp-backend-core" }
abp-core = { path = "../abp-core" }
abp-host = { path = "../abp-host" }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
