[package]
name = "abp-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
abp-core = { path = "../abp-core" }
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
