[package]
name = "abp-budget"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Thread-safe budget limits and tracking utilities for Agent Backplane runs"
readme = "README.md"
keywords = ["agent", "backplane", "budget", "limits"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
