[package]
name = "abp-claude-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Anthropic Claude SDK adapter for Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "claude", "anthropic"]
categories = ["development-tools"]

[dependencies]
abp-tooling = { path = "../abp-tooling" }
abp-core = { path = "../abp-core" }
abp-runtime = { path = "../abp-runtime" }
abp-sidecar-sdk = { path = "../abp-sidecar-sdk" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
