[package]
name = "abp-cli-params"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI flag parsing helpers for Agent Backplane runtime config"
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
