[package]
name = "abp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "abp"
path = "src/main.rs"

[dependencies]
abp-core = { path = "../abp-core" }
abp-codex-sdk = { path = "../abp-codex-sdk" }
abp-gemini-sdk = { path = "../abp-gemini-sdk" }
abp-host = { path = "../abp-host" }
abp-integrations = { path = "../abp-integrations" }
abp-runtime = { path = "../abp-runtime" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
