[package]
name = "abp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "cli", "tool"]
categories = ["command-line-utilities"]

[[bin]]
name = "abp"
path = "src/main.rs"

[dependencies]
abp-core = { path = "../abp-core" }
abp-codex-sdk = { path = "../abp-codex-sdk" }
abp-copilot-sdk = { path = "../abp-copilot-sdk" }
abp-claude-sdk = { path = "../abp-claude-sdk" }
abp-kimi-sdk = { path = "../abp-kimi-sdk" }
abp-gemini-sdk = { path = "../abp-gemini-sdk" }
abp-host = { path = "../abp-host" }
abp-integrations = { path = "../abp-integrations" }
abp-runtime = { path = "../abp-runtime" }
abp-cli-params = { path = "../abp-cli-params" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
jsonschema = "0.28"
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
