[package]
name = "abp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "cli", "tool"]
categories = ["command-line-utilities"]

[[bin]]
name = "abp"
path = "src/main.rs"

[dependencies]
abp-config = { path = "../abp-config", version = "0.1.0" }
abp-core = { path = "../abp-core", version = "0.1.0" }
abp-codex-sdk = { path = "../abp-codex-sdk", version = "0.1.0" }
abp-copilot-sdk = { path = "../abp-copilot-sdk", version = "0.1.0" }
abp-claude-sdk = { path = "../abp-claude-sdk", version = "0.1.0" }
abp-kimi-sdk = { path = "../abp-kimi-sdk", version = "0.1.0" }
abp-gemini-sdk = { path = "../abp-gemini-sdk", version = "0.1.0" }
abp-host = { path = "../abp-host", version = "0.1.0" }
abp-integrations = { path = "../abp-integrations", version = "0.1.0" }
abp-runtime = { path = "../abp-runtime", version = "0.1.0" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
jsonschema = "0.28"
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
