[package]
name = "abp-codex-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
abp-host = { path = "../abp-host" }
abp-backend-sidecar = { path = "../abp-backend-sidecar" }
abp-runtime = { path = "../abp-runtime" }
anyhow.workspace = true
