[package]
name = "abp-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration loading, validation, and merging for the Agent Backplane"
keywords = ["agent", "backplane", "config", "toml", "validation"]
categories = ["config"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
