[package]
name = "abp-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration loading, validation, and merging for the Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "config", "toml", "validation"]
categories = ["config"]

[dependencies]
abp-config-env = { path = "../abp-config-env", version = "0.1.0" }
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
tempfile.workspace = true
