[package]
name = "abp-copilot-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GitHub Copilot sidecar SDK integration for the Agent Backplane"
keywords = ["agent", "backplane", "copilot", "sdk", "sidecar"]
categories = ["development-tools"]

[dependencies]
abp-host = { path = "../abp-host" }
abp-integrations = { path = "../abp-integrations" }
abp-runtime = { path = "../abp-runtime" }
anyhow.workspace = true
