[package]
name = "abp-copilot-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "GitHub Copilot sidecar SDK integration for the Agent Backplane"
keywords = ["agent", "backplane", "copilot", "sdk", "sidecar"]
categories = ["development-tools"]

[dependencies]
abp-tooling = { path = "../abp-tooling" }
abp-core = { path = "../abp-core" }
abp-runtime = { path = "../abp-runtime" }
abp-sidecar-sdk = { path = "../abp-sidecar-sdk" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
