[package]
name = "abp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stable contract types for the Agent Backplane — WorkOrder, Receipt, AgentEvent, and capabilities"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "contract", "sdk"]
categories = ["development-tools"]

[dependencies]
abp-error = { path = "../abp-error" }
chrono.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "core_benches"
harness = false

[[bench]]
name = "core_bench"
harness = false

[features]
# Keep a feature gate for anything that could be “heavy” later.
default = []
