[package]
name = "abp-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP control-plane daemon for the Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "daemon", "server"]
categories = ["command-line-utilities"]

[lib]
name = "abp_daemon"
path = "src/lib.rs"

[[bin]]
name = "abp-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
abp-core = { path = "../abp-core" }
abp-codex-sdk = { path = "../abp-codex-sdk" }
abp-claude-sdk = { path = "../abp-claude-sdk" }
abp-kimi-sdk = { path = "../abp-kimi-sdk" }
abp-gemini-sdk = { path = "../abp-gemini-sdk" }
abp-host = { path = "../abp-host" }
abp-integrations = { path = "../abp-integrations" }
abp-runtime = { path = "../abp-runtime" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum = { version = "0.8.8", features = ["ws"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
tokio-tungstenite = "0.28"
futures = { workspace = true }
proptest = { workspace = true }
