[package]
name = "abp-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "abp-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
abp-core = { path = "../abp-core" }
abp-codex-sdk = { path = "../abp-codex-sdk" }
abp-claude-sdk = { path = "../abp-claude-sdk" }
abp-kimi-sdk = { path = "../abp-kimi-sdk" }
abp-gemini-sdk = { path = "../abp-gemini-sdk" }
abp-host = { path = "../abp-host" }
abp-backend-mock = { path = "../abp-backend-mock" }
abp-backend-sidecar = { path = "../abp-backend-sidecar" }
abp-runtime = { path = "../abp-runtime" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum = "0.8.8"
