[package]
name = "abp-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP control-plane daemon for the Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "daemon", "server"]
categories = ["command-line-utilities"]

[lib]
name = "abp_daemon"
path = "src/lib.rs"

[[bin]]
name = "abp-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
abp-config = { path = "../abp-config", version = "0.1.0" }
abp-core = { path = "../abp-core", version = "0.1.0" }
abp-codex-sdk = { path = "../abp-codex-sdk", version = "0.1.0" }
abp-copilot-sdk = { path = "../abp-copilot-sdk", version = "0.1.0" }
abp-claude-sdk = { path = "../abp-claude-sdk", version = "0.1.0" }
abp-kimi-sdk = { path = "../abp-kimi-sdk", version = "0.1.0" }
abp-gemini-sdk = { path = "../abp-gemini-sdk", version = "0.1.0" }
abp-host = { path = "../abp-host", version = "0.1.0" }
abp-integrations = { path = "../abp-integrations", version = "0.1.0" }
abp-runtime = { path = "../abp-runtime", version = "0.1.0" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum = { version = "0.8.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
tokio-tungstenite = "0.28"
futures = { workspace = true }
proptest = { workspace = true }
