[package]
name = "abp-dialect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dialect detection, validation, and metadata for the Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "dialect", "detection", "ai"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
