[package]
name = "abp-duration-serde"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Serde helpers for encoding std::time::Duration values as milliseconds"
readme = "README.md"
keywords = ["serde", "duration", "time", "agent", "backplane"]
categories = ["encoding", "rust-patterns"]

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
