[package]
name = "abp-duration-serde"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Serde helpers for encoding std::time::Duration as milliseconds"

[dependencies]
serde.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
