[package]
name = "abp-emulation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Labeled capability emulation for Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "emulation", "capability"]
categories = ["development-tools"]

[dependencies]
abp-core = { path = "../abp-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
