[package]
name = "abp-error-taxonomy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deep tests for the ABP error taxonomy"
keywords = ["agent", "backplane", "error", "taxonomy", "testing"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
abp-error = { path = "../abp-error", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
schemars.workspace = true
