[package]
name = "abp-event-kind"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canonical AgentEventKind naming helpers"
readme = "README.md"
keywords = ["agent", "event", "kind", "backplane"]
categories = ["development-tools"]

[dependencies]
abp-core = { path = "../abp-core", version = "0.1.0" }

[dev-dependencies]
serde_json = { workspace = true }
