[package]
name = "abp-event-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Event observability primitives for Agent Backplane streams"
readme = "README.md"
keywords = ["agent", "backplane", "event", "stats", "recorder"]
categories = ["development-tools"]

[dependencies]
abp-core = { path = "../abp-core", version = "0.1.0" }

[dev-dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
